--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,26 @@
 name: CI/CD Pipeline for Calculator
-
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
       - name: Set up CMake
         uses: lukka/get-cmake@v3.21.2
-
       - name: Install dependencies
         run: sudo apt-get install -y build-essential libgtest-dev
-
       - name: Build project
         run: |
           mkdir build
           cd build
-          cmake ..
+          cmake ..  # Asegúrate de que este comando apunte al directorio correcto
           make
-
       - name: Run tests
         run: |
           cd build
-          ./test_calculator
+          ./run_tests
