--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         run: sudo apt-get install -y build-essential libgtest-dev
       - name: Build project
         run: |
+          cd Laboratorios/Laboratorio10
           mkdir build
           cd build
           cmake ..  # Asegúrate de que este comando apunte al directorio correcto
