--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Build project
         run: |
           cd ./Laboratorios/Laboratorio10/CalculatorProject
-          mkdir ./Laboratorios/Laboratorio10/CalculatorProject/build
-          cd ./Laboratorios/Laboratorio10/CalculatorProject/build
+          mkdir build
+          cd build
           cmake ..  # Asegúrate de que este comando apunte al directorio correcto
           make
       - name: Run tests
