--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,12 @@ jobs:
       # Paso 5: Crear directorio de compilación y compilar el proyecto
       - name: Build project
         run: |
-          mkdir -p CalculatorProject/build
-          cd CalculatorProject/build
+          mkdir -p ./Laboratorios/Laboratorio10/CalculatorProject/build
+          cd ./Laboratorios/Laboratorio10/CalculatorProject/build
           cmake ..
           make
       # Paso 6: Ejecutar las pruebas
       - name: Run tests
         run: |
-          cd CalculatorProject/build/tests
+          cd ./Laboratorios/Laboratorio10/CalculatorProject/build/tests
           ./run_tests
