--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       # Paso 2: Clonar GoogleTest dentro de CalculatorProject
       - name: Clone GoogleTest
         run: |
-          git clone https://github.com/google/googletest.git CalculatorProject/googletest
+          git clone https://github.com/google/googletest.git Laboratorios/Laboratorio10/CalculatorProject/googletest
       # Paso 3: Instalar CMake
       - name: Set up CMake
         uses: lukka/get-cmake@v3.21.2
@@ -43,8 +43,9 @@ jobs:
       # Paso 5: Crear directorio de compilación y compilar el proyecto
       - name: Build project
         run: |
-          mkdir -p ./Laboratorios/Laboratorio10/CalculatorProject/build
-          cd ./Laboratorios/Laboratorio10/CalculatorProject/build
+          cd ./Laboratorios/Laboratorio10/CalculatorProject
+          mkdir -p build
+          cd build
           cmake ..
           make
       # Paso 6: Ejecutar las pruebas
