--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       # Paso 5: Crear directorio de compilación y compilar el proyecto
       - name: Build project
         run: |
-          cd ./Laboratorios/Laboratorio10/CalculatorProject
+          cd ./Tareas/Tarea7
           mkdir -p build
           cd build
           cmake ..
